--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,6 +1,6 @@
 .home-container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
   background: #000000;
   background: -webkit-linear-gradient(to top, #000000, #434343);
@@ -35,26 +35,85 @@
   bottom: 0;
   width: 100%;
   margin-bottom: -23px;
+  height: 70px;
 }
 
-/* MOBILE */
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
 
-@media screen and (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1024px) {
+  .home-container {
+    width: 100vw;
+    min-height: 100vh;
+  }
+  .home-container .video-container iframe {
+    width: 86vw;
+    height: 100%;
+  }
+  .home-container .donate-button-wrap {
+    position: relative;
+    bottom: -410px;
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .home-container {
+    width: 100vw;
+    min-height: 100vh;
+  }
+  .home-container .video-container iframe {
+    width: 86vw;
+    height: 100%;
+  }
+  .home-container .donate-button-wrap {
+    position: relative;
+    bottom: -227px;
+  }
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .home-container {
+    width: 100vw;
+    min-height: 100vh;
+  }
+  .home-container .video-container iframe {
+    width: 86vw;
+    height: 70%;
+  }
+  .home-container .donate-button-wrap {
+    position: relative;
+    top: -47px;
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .home-container {
+    width: 100vw;
+    min-height: 100vh;
+  }
+  
   .home-container .donate-button-wrap {
     position: absolute;
     bottom: 20px;
   }
   .home-container .video-container iframe {
     width: 96vw;
-  }
-}
-
-@media screen and (max-width: 568px) {
-  .home-container .video-container iframe {
-    width: 90vw;
-  }
-  .home-container .donate-button-wrap {
-    position: absolute;
-    bottom: 20px;
   }
 }
