--- a/src/components/styles/ABTClasses.css
+++ b/src/components/styles/ABTClasses.css
@@ -23,11 +23,6 @@
   font-size: 15px !important;
 }
 
-.schedule-container .weekly-schedule {
-  margin: 0 auto 20px auto;
-  display: block;
-}
-
 .schedule-container .weekly-schedule .day {
   text-align: left;
   width: 80;
@@ -50,8 +45,11 @@
 }
 
 .schedule-container .weekly-schedule {
-  width: 600px;
-  padding: 0 4px;
+  width: 470px;
+  padding: 0;
+  background-color: hsla(0, 0%, 100%, .8);
+  margin: 0 auto 20px auto;
+  display: block;
 }
 
 .schedule-container .btn-wrap {
