--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -9,7 +9,7 @@
 
 .home-container .video-container {
   width: 100%;
-  height: 420px;
+  height: 350px;
 }
 
 .home-container .video-container iframe {
@@ -25,17 +25,13 @@
 }
 
 .home-container .donate-button-wrap {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  z-index: 9999;
-  background-color: rgb(247, 249, 250);
-  padding: 10px 0;
   position: absolute;
   bottom: 0;
+  padding: 5px 0 0 0;
+  height: auto;
+  background-color: rgb(247, 249, 250);
   width: 100%;
-  margin-bottom: -23px;
-  height: 70px;
+  text-align: center;
 }
 
 /* 
@@ -51,10 +47,6 @@
   .home-container .video-container iframe {
     width: 86vw;
     height: 100%;
-  }
-  .home-container .donate-button-wrap {
-    position: relative;
-    bottom: -410px;
   }
 }
 
@@ -72,9 +64,19 @@
     width: 86vw;
     height: 100%;
   }
+  .home-container .video-container iframe {
+    margin: 0 auto;
+    height: 300px;
+    width: 600px;
+  }
+}
+
+/* iphone X */
+
+@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
   .home-container .donate-button-wrap {
     position: relative;
-    bottom: -227px;
+    margin-bottom: 50px;
   }
 }
 
@@ -94,7 +96,7 @@
   }
   .home-container .donate-button-wrap {
     position: relative;
-    top: -47px;
+    margin-bottom: 50px;
   }
 }
 
@@ -107,11 +109,6 @@
   .home-container {
     width: 100vw;
     min-height: 100vh;
-  }
-  
-  .home-container .donate-button-wrap {
-    position: absolute;
-    bottom: 20px;
   }
   .home-container .video-container iframe {
     width: 96vw;
