--- a/src/components/styles/Navigation.css
+++ b/src/components/styles/Navigation.css
@@ -9,63 +9,78 @@
 }
 
 .dropdown-menu>li>a {
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-size: 12px;
 }
 
 .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover, .dropdown-menu>li>a:active, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
-    background-color: #9b863c;
-    color: #fff;
+    background-color: rgb(155, 134, 60);
+    color: rgb(255, 255, 255);
 }
 
 .dropdown-menu>.active>a {
-    background-color: #232223;
-    color: #9b863c;
+    background-color: rgb(35, 34, 35);
+    color: rgb(155, 134, 60);
 }
 
 .navbar-default {
-    font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
     font-size: 12px;
     border: none;
-    background-color: #232223;
-    ;
+    background-color: rgb(35, 34, 35);
     margin: 0;
     border-radius: 0;
     text-transform: uppercase;
 }
 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-color: rgb(35, 34, 35);
+}
+
+.navbar-default .navbar-toggle {
+    border-color: rgb(155, 134, 60)
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: rgb(155, 134, 60);
+}
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+    background-color: rgb(35, 34, 35);
+}
+
 li.nav-menu a {
     text-decoration: none;
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
 
 li.nav-menu a:hover {
-    color: #9b863c;
+    color: rgb(155, 134, 60);
 }
 
 .navbar-default .navbar-nav>li>a {
     text-decoration: none;
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
 
 .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-    color: #9b863c;
+    color: rgb(155, 134, 60);
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-    color: #9b863c;
-    background: #232223;
+    color: rgb(155, 134, 60);
+    background: rgb(35, 34, 35);
 }
 
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-    background: #232223;
-    color: #9b863c;
+    background: rgb(35, 34, 35);
+    color: rgb(155, 134, 60);
 }
 
 .navbar-nav>li>.dropdown-menu {
-    background-color: #232223;
-    color: #fff
+    background-color: rgb(35, 34, 35);
+    color: rgb(255, 255, 255)
 }
 
 img.logo-image {
@@ -131,29 +146,36 @@ img.logo-image {
     }
     li.nav-menu a {
         text-decoration: none;
-        color: #fff;
+        color: rgb(255, 255, 255);
     }
     li.nav-menu a:hover {
-        color: #9b863c;
+        color: rgb(155, 134, 60);
     }
     .navbar-default .navbar-nav>li>a {
         text-decoration: none;
-        color: #fff;
+        color: rgb(255, 255, 255);
     }
     .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-        color: #9b863c;
+        color: rgb(155, 134, 60);
     }
     .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-        color: #9b863c;
-        background: #232223;
+        color: rgb(155, 134, 60);
+        background: rgb(35, 34, 35);
     }
     .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-        background: #232223;
-        color: #9b863c;
+        background: rgb(35, 34, 35);
+        color: rgb(155, 134, 60);
     }
     .navbar-nav>li>.dropdown-menu {
-        background-color: #232223;
-        color: #fff
+        background-color: rgb(35, 34, 35);
+        color: rgb(255, 255, 255)
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
+        background: rgb(35, 34, 35);
+        color: rgb(155, 134, 60);
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: rgb(255, 255, 255)
     }
 }
 
@@ -163,28 +185,35 @@ img.logo-image {
     }
     li.nav-menu a {
         text-decoration: none;
-        color: #fff;
+        color: rgb(255, 255, 255);
     }
     li.nav-menu a:hover {
-        color: #9b863c;
+        color: rgb(155, 134, 60);
     }
     .navbar-default .navbar-nav>li>a {
         text-decoration: none;
-        color: #fff;
+        color: rgb(255, 255, 255);
     }
     .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-        color: #9b863c;
+        color: rgb(155, 134, 60);
     }
     .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-        color: #9b863c;
-        background: #232223;
+        color: rgb(155, 134, 60);
+        background: rgb(35, 34, 35);
     }
     .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-        background: #232223;
-        color: #9b863c;
+        background: rgb(35, 34, 35);
+        color: rgb(155, 134, 60);
     }
     .navbar-nav>li>.dropdown-menu {
-        background-color: #232223;
-        color: #fff
+        background-color: rgb(35, 34, 35);
+        color: rgb(255, 255, 255)
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
+        background: rgb(35, 34, 35);
+        color: rgb(155, 134, 60);
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: rgb(255, 255, 255)
     }
 }
