--- a/src/components/styles/SpecialNeeds.css
+++ b/src/components/styles/SpecialNeeds.css
@@ -30,6 +30,11 @@
   padding-top: 20px;
 }
 
+.special-needs-container .phone-number {
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* MOBILE */
 
 @media screen and (max-width: 768px) {
