--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,5 +1,5 @@
 .contact-container {
-    background: url('../../images/site/contact_min.jpg') no-repeat fixed;
+    background: url('../../images/site/contact.jpg') no-repeat fixed;
     background-size: 500px 100%;
     width: 100vw;
     margin: 0 auto;
