--- a/src/components/styles/ABTClasses.css
+++ b/src/components/styles/ABTClasses.css
@@ -1,5 +1,5 @@
 .schedule-container {
-  background: url('../../images/site/classhedule_min.jpg') no-repeat fixed;
+  background: url('../../images/site/schedule.jpg') no-repeat fixed;
   background-size: 500px 100vh;
   width: 100vw;
   margin: 0 auto;
@@ -64,6 +64,7 @@
   }
   .schedule-container .content {
     background-color: rgba(255, 255, 255, 0.8) !important;
+    margin-bottom: 20px;
   }
   .schedule-container .google-class-schedule {
     height: 650px;
@@ -73,6 +74,7 @@
   }
   .schedule-container .weekly-schedule {
     width: 100vw;
+    background: none;
   }
 }
 
@@ -82,19 +84,21 @@
   }
   .schedule-container .content {
     background-color: rgba(255, 255, 255, 0.8) !important;
+    margin-bottom: 20px;
   }
   .schedule-container .classType p {
     font-size: 14px;
   }
   .schedule-container .weekly-schedule {
     width: 100vw;
+    background: none;
   }
 }
 
 /* CLASS DESCRIPTION */
 
 .description-container {
-  background: url('../../images/site/description_min.jpg') no-repeat fixed;
+  background: url('../../images/site/description.jpg') no-repeat fixed;
   background-size: 500px 100vh;
   width: 100vw;
   margin: 0 auto;
