--- a/src/components/styles/Mission.css
+++ b/src/components/styles/Mission.css
@@ -1,5 +1,5 @@
 .mission-container {
-    background: url('../../images/site/mission_min.jpg') no-repeat fixed;
+    background: url('../../images/site/about.jpg') no-repeat fixed;
     background-size: 500px 100vh;
     width: 100vw;
     margin: 0 auto;
