--- a/src/components/styles/Performances.css
+++ b/src/components/styles/Performances.css
@@ -1,6 +1,6 @@
 .performace-container {
     width: 90%;
-    margin: 0 auto 35px auto;
+    margin: 80px auto 100px auto;
     padding: 40px;
     display: table;
 }
