--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,6 @@ html body {
 
 /* Global Styles */
 
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
 body {
     font-family: 'Quicksand', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
@@ -35,6 +28,13 @@ input[type=file] {
     min-height: 100vh;
 }
 
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .App {
     min-height: 100vh;
     width: 100%;
@@ -48,7 +48,7 @@ input[type=file] {
     float: right;
     z-index: 9999;
     background-color: rgba(255, 255, 255, 0.8);
-    margin: 30px auto 0 auto;
+    margin: 80px auto 60px auto;
     width: 65vw;
 }
 
