--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,37 +1,21 @@
-.home-container {
-  width: 100vw;
-  min-height: 100vh;
-  margin: 0 auto;
-  background: #000000;
-  background: -webkit-linear-gradient(to top, #000000, #434343);
-  background: linear-gradient(to top, #000000, #434343);
-}
-
 .home-container .video-container {
-  width: 100%;
-  height: 350px;
+  margin-top: 100px;
 }
 
-.home-container .video-container video {
+.home-container .video-container iframe {
   width: 680px;
-  height: 100%;
+  height: 350px;
   margin: 0 auto;
   display: block;
 }
 
-.home-container .wrap {
-  position: relative;
-  top: 40px;
-}
-
 .home-container .donate-button-wrap {
+  width: 160px;
+  text-align: center;
   position: absolute;
   bottom: 0;
-  padding: 5px 0 0 0;
-  height: auto;
-  background-color: rgb(247, 249, 250);
-  width: 100%;
-  text-align: center;
+  margin-bottom: 50px;
+  display: block;
 }
 
 /* 
@@ -40,13 +24,12 @@
 */
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .home-container {
-    width: 100vw;
-    min-height: 100vh;
+  .home-container .video-container {
+    margin-top: 100px;
   }
-  .home-container .video-container video {
-    width: 86vw;
-    height: 100%;
+  .home-container .video-container iframe {
+    width: 600px;
+    height: 400px;
   }
 }
 
@@ -56,27 +39,29 @@
 */
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .home-container {
-    width: 100vw;
-    min-height: 100vh;
+  .home-container .video-container {
+    margin-top: 100px;
   }
-  .home-container .video-container video {
-    width: 86vw;
-    height: 100%;
-  }
-  .home-container .video-container video {
+  .home-container .video-container iframe {
     margin: 0 auto;
-    height: 300px;
     width: 600px;
+    height: 400px;
   }
 }
 
 /* iphone X */
 
 @media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
+  .home-container .video-container {
+    margin-top: 100px;
+  }
+  .home-container .video-container iframe {
+    width: 86vw;
+    height: 240px;
+  }
   .home-container .donate-button-wrap {
-    position: relative;
-    margin-bottom: 50px;
+    position: static;
+    margin-top: 30px;
   }
 }
 
@@ -86,17 +71,19 @@
 */
 
 @media (min-width: 481px) and (max-width: 767px) {
-  .home-container {
-    width: 100vw;
-    min-height: 100vh;
+  .home-container .video-container {
+    margin-top: 80px;
   }
-  .home-container .video-container video {
-    width: 86vw;
-    height: 70%;
+  .home-container .video-container iframe {
+    width: 400px;
+    height: 220px;
   }
   .home-container .donate-button-wrap {
-    position: relative;
-    margin-bottom: 50px;
+    position: static;
+    margin-top: 30px;
+  }
+  .home-container {
+    min-height: 100vh;
   }
 }
 
@@ -106,11 +93,10 @@
 */
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .home-container {
-    width: 100vw;
-    min-height: 100vh;
+  .home-container .video-container {
+    margin-top: 100px;
   }
-  .home-container .video-container video {
+  .home-container .video-container iframe {
     width: 96vw;
   }
 }
