--- a/src/components/styles/Navigation.css
+++ b/src/components/styles/Navigation.css
@@ -32,6 +32,10 @@
     margin: 0;
     border-radius: 0;
     text-transform: uppercase;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
@@ -177,6 +181,9 @@ img.logo-image {
     .navbar-default .navbar-nav .open .dropdown-menu>li>a {
         color: rgb(255, 255, 255)
     }
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: rgb(155, 134, 60);
+    }
 }
 
 @media screen and (max-width: 568px) {
@@ -215,5 +222,8 @@ img.logo-image {
     }
     .navbar-default .navbar-nav .open .dropdown-menu>li>a {
         color: rgb(255, 255, 255)
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: rgb(155, 134, 60);
     }
 }
