--- a/src/components/styles/Mission.css
+++ b/src/components/styles/Mission.css
@@ -1,6 +1,6 @@
 .mission-container {
     background: url('../../images/site/about.jpg') no-repeat fixed;
-    background-size: 500px 100vh;
+    background-size: 500px 100%;
     width: 100vw;
     margin: 0 auto;
     display: inline-table;
