--- a/src/components/styles/Registration.css
+++ b/src/components/styles/Registration.css
@@ -1,6 +1,6 @@
 .registration-container {
   background: url('../../images/site/registration.jpg') no-repeat fixed;
-  background-size: 500px 100vh;
+  background-size: 500px 100%;
   width: 100vw;
   margin: 0 auto;
   display: inline-table;
@@ -37,15 +37,15 @@
 
 .scholarships-container {
   background: url('../../images/site/scholarship_min.jpg') no-repeat fixed;
-  background-size: 500px 100vh;
+  background-size: 500px 100%;
   width: 100vw;
   margin: 0 auto;
   display: inline-block;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .scholarships-container .content p {
-  padding: 22px 0 0 14px;
+  padding: 20px 30px 0 20px;
 }
 
 .scholarships-container .content p:last-child {
