--- a/src/components/styles/PhotoGallery.css
+++ b/src/components/styles/PhotoGallery.css
@@ -18,6 +18,9 @@
 /* MOBILE */
 
 @media screen and (max-width: 568px) {
+    .photo-gallery-container {
+        margin: 72px auto 80px auto;
+    }
     #ReactGridGallery {
         margin: 10px;
     }
