adjust iframe width

--- a/src/components/styles/ABTClasses.css
+++ b/src/components/styles/ABTClasses.css
@@ -120,8 +120,8 @@
     background: none;
   }
   .schedule-container iframe {
-    height: 320px;
-    width: 360px !important;
+    height: 340px;
+    width: 300px;
     margin: 0 auto;
     display: block;
   }
