add meta description and hamburguer animation

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:bold');
 html body {
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 /* Global Styles */
