--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
-
-html  body {
+html body {
   font-family: 'Quicksand', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #000000;
   min-height: 100vh;
+  overflow-x: hidden;
 }
