--- a/src/components/movement-therapy/MovementTherapy.css
+++ b/src/components/movement-therapy/MovementTherapy.css
@@ -1,7 +1,7 @@
-/* Special Needs Container */
+/* Movement Therapy Container */
 
-.special-needs-container {
-  background: url('../../images/site/specialneeds.jpg') no-repeat fixed;
+.movement-therapy-container {
+  background: url('../../images/site/movement-therapy.jpg') no-repeat fixed;
   background-size: 500px 100%;
   width: 100vw;
   margin: 0 auto;
@@ -9,24 +9,24 @@
   display: inline-table;
 }
 
-.special-needs-container .content p:first-of-type {
+.movement-therapy-container .content p:first-of-type {
   padding-top: 20px;
 }
 
-.special-needs-container .content p {
+.movement-therapy-container .content p {
   padding: 0 30px 0 20px;
 }
 
-.special-needs-container .content img {
+.movement-therapy-container .content img {
   float: left;
   padding: 0 15px 10px 0;
 }
 
-.special-needs-container p:last-child {
+.movement-therapy-container p:last-child {
   padding-top: 20px;
 }
 
-.special-needs-container .phone-number {
+.movement-therapy-container .phone-number {
   font-weight: 600;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -34,27 +34,27 @@
 /* MOBILE */
 
 @media screen and (max-width: 768px) {
-  .special-needs-container img {
+  .movement-therapy-container img {
     float: none !important;
     margin: 0 auto;
     display: block;
   }
-  .special-needs-container {
+  .movement-therapy-container {
     margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 568px) {
-  .special-needs-container img {
+  .movement-therapy-container img {
     float: none !important;
     margin: 0 auto;
     display: block;
     padding: 5px 0;
   }
-  .special-needs-container {
+  .movement-therapy-container {
     margin: 0 auto;
   }
-  .special-needs-container .content {
+  .movement-therapy-container .content {
     background-size: 100% 100%;
   }
 }
