--- a/src/components/abt-classes/ABTClasses.css
+++ b/src/components/abt-classes/ABTClasses.css
@@ -159,6 +159,10 @@
   height: 100vh;
 }
 
+.description-container .quote-container p:first-child {
+  margin-top: 25px;
+}
+
 .description-container .quote {
   text-align: center;
   margin: 25px auto;
