--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html body {
 /* Global Styles */
 
 body {
-  font-family: 'Quicksand', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #000000;
 }
