--- a/src/components/faculty/Faculty.css
+++ b/src/components/faculty/Faculty.css
@@ -7,8 +7,16 @@
   float: left;
   padding: 0 15px 10px 0;
   height: 190px;
+  margin-top: 4px;
 }
 
 .faculty-container .bios p {
   text-align: left;
+  padding: 0;
+  margin: 0;
+}
+
+.faculty-container .instructor {
+  display: block;
+  padding-bottom: 4px;
 }
