--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -31,7 +31,7 @@
     background-color: rgb(35, 34, 35);
     margin: 0;
     border-radius: 0;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     position: fixed;
     top: 0;
     width: 100%;
