--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -1,96 +1,90 @@
 .dropdown-menu {
-    border: 0;
-    background-color: none;
-    border-radius: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  border: 0;
+  background-color: none;
+  border-radius: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .dropdown-menu>li>a {
-    color: rgb(255, 255, 255);
-    font-size: 12px;
+  color: rgb(35, 34, 35);
+  font-size: 16px;
 }
 
 .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover, .dropdown-menu>li>a:active, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
-    background-color: rgb(155, 134, 60);
-    color: rgb(255, 255, 255);
+  background-color: #8d8e8e;
+  color: rgb(35, 34, 35);
 }
 
 .dropdown-menu>.active>a {
-    background-color: rgb(35, 34, 35);
-    color: rgb(155, 134, 60);
+  background-color: #8d8e8e;
+  color: rgb(35, 34, 35);
 }
 
 .navbar-default {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 100;
-    font-size: 12px;
-    border: none;
-    background-color: rgb(35, 34, 35);
-    margin: 0;
-    border-radius: 0;
-    /* text-transform: uppercase; */
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 999;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 100;
+  font-size: 16px;
+  border: none;
+  background-color: #f7f9fa;
+  margin: 0;
+  border-radius: 0;
+  position: fixed;
+  top: 75px;
+  width: 100%;
+  z-index: 999;
+  color: rgb(35, 34, 35);
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border-color: rgb(35, 34, 35);
+  border-color: rgb(35, 34, 35);
 }
 
 .navbar-default .navbar-toggle {
-    border-color: rgb(155, 134, 60)
+  border-color: #8d8e8e;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: rgb(155, 134, 60);
+  background-color: #8d8e8e;
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: rgb(35, 34, 35);
+  background-color: #f7f9fa;
 }
 
 li.nav-menu a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
+  text-decoration: none;
+  color: rgb(35, 34, 35);
 }
 
 li.nav-menu a:hover {
-    color: rgb(155, 134, 60);
+  color: rgb(155, 134, 60);
 }
 
 .navbar-default .navbar-nav>li>a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
+  text-decoration: none;
+  color: rgb(35, 34, 35);
 }
 
 .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-    color: rgb(155, 134, 60);
+  color: rgb(35, 34, 35);
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-    color: rgb(155, 134, 60);
-    background: rgb(35, 34, 35);
+  color: rgb(35, 34, 35);
+  background: #f7f9fa;
 }
 
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-    background: rgb(35, 34, 35);
-    color: rgb(155, 134, 60);
+  background: #babcbc;
+  color: rgb(35, 34, 35)
 }
 
 .navbar-nav>li>.dropdown-menu {
-    background-color: rgb(35, 34, 35);
-    color: rgb(255, 255, 255)
-}
-
-img.logo-image {
-    width: 320px;
-    height: 57px;
-    margin: -20px 0 0 0;
+  background-color: #babcbc;
+  color: rgb(35, 34, 35)
 }
 
 /* MOBILE */
@@ -98,222 +92,216 @@ img.logo-image {
 /* Add hambuguer menu to tablets */
 
 @media (max-width: 1200px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left, .navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in {
-        display: block !important;
-    }
-    .navbar-nav .open .dropdown-menu {
-        position: static;
-        float: none;
-        width: auto;
-        margin-top: 0;
-        background-color: transparent;
-        border: 0;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left, .navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .navbar-nav {
+    float: none!important;
+    margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+    float: none;
+  }
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in {
+    display: block !important;
+  }
+  .navbar-nav .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 }
 
 /* HAMBURGUER MENU ANIMATION */
 
 button.navbar-toggle .icon-bar {
-    position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 button.navbar-toggle .icon-bar:nth-of-type(2) {
-    top: 6px;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+  top: 6px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 button.navbar-toggle .icon-bar:nth-of-type(3) {
-    /*     opacity: 0; */
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+  /*     opacity: 0; */
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 button.navbar-toggle .icon-bar:nth-of-type(4) {
-    top: -6px;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-    left: 50%;
-    opacity: 0;
+  top: -6px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+  left: 50%;
+  opacity: 0;
 }
 
 .navbar-default .collapsed .icon-bar:nth-of-type(2) {
-    top: auto;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+  top: auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 .navbar-default .collapsed .icon-bar:nth-of-type(3) {
-    opacity: 1;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 .navbar-default .collapsed .icon-bar:nth-of-type(4) {
-    top: auto;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-    left: 0;
-    opacity: 1;
+  top: auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+  left: 0;
+  opacity: 1;
 }
 
 @media screen and (max-width: 768px) {
-    img.logo-image {
-        width: 240px;
-    }
-    li.nav-menu a {
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-    }
-    li.nav-menu a:hover {
-        color: rgb(155, 134, 60);
-    }
-    .navbar-default .navbar-nav>li>a {
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-    }
-    .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-        color: rgb(155, 134, 60);
-    }
-    .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-        color: rgb(155, 134, 60);
-        background: rgb(35, 34, 35);
-    }
-    .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-        background: rgb(35, 34, 35);
-        color: rgb(155, 134, 60);
-    }
-    .navbar-nav>li>.dropdown-menu {
-        background-color: rgb(35, 34, 35);
-        color: rgb(255, 255, 255)
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
-        background: rgb(35, 34, 35);
-        color: rgb(155, 134, 60);
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
-        color: rgb(255, 255, 255)
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
-        color: rgb(155, 134, 60);
-    }
+  li.nav-menu a {
+    text-decoration: none;
+    color: rgb(35, 34, 35);
+  }
+  li.nav-menu a:hover {
+    color: #8d8e8e;
+  }
+  .navbar-default .navbar-nav>li>a {
+    text-decoration: none;
+    color: rgb(35, 34, 35);
+  }
+  .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+    color: rgb(155, 134, 60);
+  }
+  .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: rgb(155, 134, 60);
+    background: rgb(35, 34, 35);
+  }
+  .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+    background: rgb(35, 34, 35);
+    color: #8d8e8e;
+  }
+  .navbar-nav>li>.dropdown-menu {
+    background-color: #babcbc;
+    color: rgb(35, 34, 35)
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
+    background: #8d8e8e;
+    color: rgb(35, 34, 35);
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+    color: rgb(35, 34, 35)
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
+    color: #8d8e8e;
+  }
 }
 
 @media screen and (max-width: 568px) {
-    img.logo-image {
-        width: 230px;
-    }
-    li.nav-menu a {
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-    }
-    li.nav-menu a:hover {
-        color: rgb(155, 134, 60);
-    }
-    .navbar-default .navbar-nav>li>a {
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-    }
-    .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-        color: rgb(155, 134, 60);
-    }
-    .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-        color: rgb(155, 134, 60);
-        background: rgb(35, 34, 35);
-    }
-    .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-        background: rgb(35, 34, 35);
-        color: rgb(155, 134, 60);
-    }
-    .navbar-nav>li>.dropdown-menu {
-        background-color: rgb(35, 34, 35);
-        color: rgb(255, 255, 255)
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
-        background: rgb(35, 34, 35);
-        color: rgb(155, 134, 60);
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
-        color: rgb(255, 255, 255)
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
-        color: rgb(155, 134, 60);
-    }
+  li.nav-menu a {
+    text-decoration: none;
+    color: rgb(35, 34, 35);
+  }
+  li.nav-menu a:hover {
+    color: #babcbc;
+  }
+  .navbar-default .navbar-nav>li>a {
+    text-decoration: none;
+    color: rgb(35, 34, 35);
+  }
+  .navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+    color: #8d8e8e;
+  }
+  .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #8d8e8e;
+    background: rgb(35, 34, 35);
+  }
+  .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+    background: #8d8e8e;
+    color: rgb(35, 34, 35);
+  }
+  .navbar-nav>li>.dropdown-menu {
+    background-color: #babcbc;
+    color: rgb(35, 34, 35)
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
+    background: #8d8e8e;
+    color: rgb(35, 34, 35);
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+    color: rgb(35, 34, 35)
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
+    color: #8d8e8e;
+  }
 }
