--- a/src/components/class-attire/ClassAttire.css
+++ b/src/components/class-attire/ClassAttire.css
@@ -1,10 +1,16 @@
 .class-attire-container {
-  background: url('../../images/site/about.jpg') no-repeat fixed;
-  background-size: 500px 100%;
-  width: 100vw;
   margin: 0 auto;
-  display: inline-table;
-  height: 100vh;
+}
+
+.class-attire-container:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
+.class-attire-container .class-attire-img {
+  background: url('../../images/site/about.jpg') no-repeat;
+  background-size: 100% auto;
 }
 
 .class-attire-container .title {
@@ -104,7 +110,6 @@
 @media screen and (max-width: 568px) {
   .class-attire-container {
     margin: 0 auto;
-    background-size: 100% 100%;
   }
   .class-attire-container .row-2 {
     width: 60%;
