--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -114,7 +114,7 @@
 @media screen and (max-width: 568px) {
   .contact-container {
     margin: 0 auto;
-    background-size: 100% 100%;
+    background: none;
   }
   .contact-container #wrap p {
     font-size: 18px;
