--- a/src/components/performances/Performances.css
+++ b/src/components/performances/Performances.css
@@ -1,6 +1,6 @@
 .performace-container {
   width: 100%;
-  margin: 80px auto 100px auto;
+  margin: 0 auto 30px auto;
   padding: 40px;
   display: table;
 }
